--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <script type="text/javascript">
-document.write("don't do this");
+(function() {
+  // Add code here!
+})();
         </script>
     </head>
     <body>
+        <canvas/>
     </body>
 </html>
