--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!doctype html>
 <html>
     <head>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <script type="text/javascript">
-(function() {
-  // Add code here!
-})();
+$(document).ready(function(){
+    //Canvas stuff
+    var canvas = $("canvas")[0];
+    var ctx = canvas.getContext("2d");
+    
+    function render()
+    {
+        var width = canvas.width;
+        var height = canvas.height;
+        if (height < width) {
+            width = height;
+        }
+        // background
+        ctx.fillStyle = "white";
+        ctx.fillRect(0, 0, width, height);
+        ctx.strokeStyle = "black";
+        ctx.strokeRect(0, 0, width, height);
+        ctx.strokeRect(width/2, 0, 0, height);
+        
+    }
+    render();
+});
         </script>
+        <style type="text/css">
+html, body, canvas {
+    margin: 0;
+    padding: 0;
+}
+        </style>
     </head>
     <body>
-        <canvas/>
+        <canvas></canvas>
     </body>
 </html>
