--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@ html, body, canvas {
         </style>
     </head>
     <body>
-        <canvas></canvas>
+        <canvas width="400%" height="400%"></canvas>
     </body>
 </html>
