--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@ $(document).ready(function(){
         ctx.strokeStyle = "black";
         ctx.strokeRect(0, 0, width, height);
         ctx.strokeRect(width/2, 0, 0, height);
-        
+    }
+    render_obstacle(x, y) {
+    }
+    render_target(x, y) {
+    }
+    render_car(x, y, heading) {
     }
     render();
 });
