--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ $(document).ready(function(){
         render_car(0, 1, 0);
         render_car(1, 0, 0);
         render_car(1, 1, 0);
+        render_target(0, 0, .5);
+        render_obstacle(0, 1, .5);
         for (var obstacle in obstacles) {
             render_obstacle(0, obstacle.column, obstacle.y_proportion);
         }
@@ -77,18 +79,46 @@ $(document).ready(function(){
 
     // render_obstacle(0/1, 0/1, 0-1, 'blue')
     function render_obstacle(track, column, y_proportion) {
+        x = x_val_for_track_and_column(track, column);
+        y = height * y_proportion - object_width / 2;
+
+        // outer rectangle
+        roundRect(ctx, x, y, object_width, object_width, object_width / 4, object_colors[track], null)
+
+        // inner rectangle
+        x += object_width / 4;
+        y += object_width / 4;
+        roundRect(ctx, x, y, object_width/2, object_width/2, object_width/16, null, "white")        
 
     }
     function render_target(track, column, y_proportion) {
+        x = x_val_for_track_and_column(track, column);
+        x += object_width / 2;
+        y = height * y_proportion;
 
+        // outer circle
+        ctx.beginPath();
+        ctx.fillStyle = object_colors[track];
+        ctx.arc(x, y, object_width/2, 0, 2 * Math.PI);
+        ctx.fill();
+
+        // inner circle
+        ctx.beginPath()
+        ctx.strokeStyle = "white";
+        ctx.lineWidth = 5;
+        ctx.arc(x, y, object_width/4, 0, 2 * Math.PI);
+        ctx.stroke();
     }
     function render_car(track, column, heading) {
-        x = track * road_width + column * road_width/2;
-        x += 7/24 * road_width/2;
+        x = x_val_for_track_and_column(track, column);
         y = .85 * height;
 
         ctx.fillStyle = object_colors[track];
         ctx.fillRect(x, y, object_width, object_width*1.7);
+    }
+
+    function x_val_for_track_and_column(track, column) {
+        return track * road_width + column * road_width/2 + 7/24 * road_width/2;
     }
 
     $(document).click(function() {
@@ -98,8 +128,47 @@ $(document).ready(function(){
             car_proportion = 1;
         }
     });
-    
+
     init();
+
+    /**
+     * Draws a rounded rectangle using the current state of the canvas. 
+     * If you omit the last three params, it will draw a rectangle 
+     * outline with a 5 pixel border radius 
+     * @param {CanvasRenderingContext2D} ctx
+     * @param {Number} x The top left x coordinate
+     * @param {Number} y The top left y coordinate 
+     * @param {Number} width The width of the rectangle 
+     * @param {Number} height The height of the rectangle
+     * @param {Number} radius The corner radius. Defaults to 5;
+     * @param {Boolean} fill Whether to fill the rectangle. Defaults to false.
+     * @param {Boolean} stroke Whether to stroke the rectangle. Defaults to true.
+     */
+    function roundRect(ctx, x, y, width, height, radius, fill, stroke) {
+      if (typeof stroke == "undefined" ) {
+        stroke = true;
+      }
+      if (typeof radius === "undefined") {
+        radius = 5;
+      }
+      ctx.beginPath();
+      ctx.moveTo(x + radius, y);
+      ctx.lineTo(x + width - radius, y);
+      ctx.quadraticCurveTo(x + width, y, x + width, y + radius);
+      ctx.lineTo(x + width, y + height - radius);
+      ctx.quadraticCurveTo(x + width, y + height, x + width - radius, y + height);
+      ctx.lineTo(x + radius, y + height);
+      ctx.quadraticCurveTo(x, y + height, x, y + height - radius);
+      ctx.lineTo(x, y + radius);
+      ctx.quadraticCurveTo(x, y, x + radius, y);
+      ctx.closePath();
+      if (stroke) {
+        ctx.stroke();
+      }
+      if (fill) {
+        ctx.fill();
+      }        
+    }
 });
         </script>
         <style type="text/css">
