--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+        <script src="http://underscorejs.org/underscore.js"></script>
         <script type="text/javascript">
 $(document).ready(function(){
     //Canvas stuff
@@ -54,14 +55,14 @@ $(document).ready(function(){
 
     function update() {
         var min_y = -Infinity;
-        for (var obstacle in obstacles) {
+        _.each(obstacles, function(obstacle) {
             update_y_proportion(obstacle);
             min_y = Math.min(min_y, obstacle.y_proportion);
-        }
-        for (var target in targets) {
+        });
+        _.each(targets, function(target) {
             update_y_proportion(target);
             min_y = Math.min(min_y, target.y_proportion);
-        }
+        });
         if (min_y > 0.5) {
             generate_object();
         }
@@ -83,12 +84,12 @@ $(document).ready(function(){
         ctx.strokeRect(0, 0, width, height);
         ctx.strokeRect(width/2, 0, 0, height);
 
-        for (var obstacle in obstacles) {
+        _.each(obstacles, function(obstacle) {
             render_obstacle(0, obstacle.column, obstacle.y_proportion);
-        }
-        for (var target in targets) {
+        });
+        _.each(targets, function(target) {
             render_target(0, target.column, target.y_proportion);
-        }
+        });
         render_car(0, car_proportion, 1);
     }
 
