--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ $(document).ready(function(){
 
     function generate_object() {
         var obj = {
+            track: Math.floor(Math.random() * 2),
             column: Math.floor(Math.random() * 2),
             y_proportion: 0
         };
@@ -67,7 +68,7 @@ $(document).ready(function(){
             generate_object();
         }
     }
-    
+
     function render()
     {
         width = canvas.width;
@@ -82,10 +83,10 @@ $(document).ready(function(){
         ctx.fillRect(0, 0, width, height);
 
         _.each(obstacles, function(obstacle) {
-            render_obstacle(0, obstacle.column, obstacle.y_proportion);
+            render_obstacle(obstacle.track, obstacle.column, obstacle.y_proportion);
         });
         _.each(targets, function(target) {
-            render_target(0, target.column, target.y_proportion);
+            render_target(target.track, target.column, target.y_proportion);
         });
 
         render_cars();
@@ -112,7 +113,7 @@ $(document).ready(function(){
         y += object_width / 4;
         ctx.strokeStyle = "white";
         ctx.lineWidth = 5;
-        roundRect(ctx, x, y, object_width/2, object_width/2, object_width/16, false, true)        
+        roundRect(ctx, x, y, object_width/2, object_width/2, object_width/16, false, true)
 
     }
     function render_target(track, column, y_proportion) {
@@ -150,39 +151,48 @@ $(document).ready(function(){
         return track * road_width + column * road_width/2 + 7/24 * road_width/2;
     }
 
-    $(document).click(function() {
-        for (i in [0,1]) {
-            if (car_columns[i]) {
-                car_columns[i] = 0;
-            } else {
-                car_columns[i] = 1;
-            }    
+    $(canvas).click(function(e) {
+        var i;
+        if (e.offsetX < road_width) {
+            i = 0;
+        } else if (e.offsetX < 2 * road_width) {
+            i = 1;
+        } else {
+            return;
+        }
+        if (car_columns[i]) {
+            car_columns[i] = 0;
+        } else {
+            car_columns[i] = 1;
         }
     });
     $(document).keydown(function(e) {
-        if (e.which == 37) {
+        var i;
+        if (_.contains([37, 70], e.which)) {
             i = 0;
-        } else if (e.which == 39) {
+        } else if (_.contains([39, 74], e.which)) {
             i = 1;
+        } else {
+            return;
         }
 
         if (car_columns[i]) {
             car_columns[i] = 0;
         } else {
             car_columns[i] = 1;
-        }   
+        }
     });
 
     init();
 
     /**
-     * Draws a rounded rectangle using the current state of the canvas. 
-     * If you omit the last three params, it will draw a rectangle 
-     * outline with a 5 pixel border radius 
+     * Draws a rounded rectangle using the current state of the canvas.
+     * If you omit the last three params, it will draw a rectangle
+     * outline with a 5 pixel border radius
      * @param {CanvasRenderingContext2D} ctx
      * @param {Number} x The top left x coordinate
-     * @param {Number} y The top left y coordinate 
-     * @param {Number} width The width of the rectangle 
+     * @param {Number} y The top left y coordinate
+     * @param {Number} width The width of the rectangle
      * @param {Number} height The height of the rectangle
      * @param {Number} radius The corner radius. Defaults to 5;
      * @param {Boolean} fill Whether to fill the rectangle. Defaults to false.
@@ -211,7 +221,7 @@ $(document).ready(function(){
       }
       if (fill) {
         ctx.fill();
-      }        
+      }
     }
 });
         </script>
