--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ $(document).ready(function(){
     //     column: an interger 0 or 1 indicating which track it's on
     //     y_proportion: a float in [0, 1] indicating the y position of the object.  0 is the top.
     // }
-    // car_columns is an array of 2 floats in [0, 1], where 0 represents being in the left track and 1 represents being in the right track.
+    // cars is an array of 2 car objects
     // speed is in units of screens per second
-    var obstacles, targets, car_columns, speed, min_distance_between_objects, obstacles_per_second, targets_per_second, loop, collision, accel, score;
+    var obstacles, targets, cars, speed, min_distance_between_objects, obstacles_per_second, targets_per_second, loop, collision, accel, score;
 
     var update_ms = 16;
 
@@ -46,7 +46,7 @@ $(document).ready(function(){
         score = 0;
         obstacles = [];
         targets = [];
-        car_columns = [0, 1];
+        cars = [{"cur_x":0, "intended_x":0}, {"cur_x":1, "intended_x":1}];
         speed = 0.4;
         collision = false;
         accel = 0.01
@@ -78,6 +78,27 @@ $(document).ready(function(){
         obj.y_proportion += speed * update_ms / 1000;
     }
 
+    function update_car_position(car) {
+        var cur_x = car["cur_x"];
+        var intended_x = car["intended_x"];
+
+        d = Math.abs(cur_x - intended_x);
+        var update_d;
+
+        if (d < update_ms / 10) {
+            update_d = d / 5;
+        } else {
+            update_d = update_ms / 100;
+        }
+
+
+        if (intended_x > cur_x) {
+            car["cur_x"] += update_d;
+        } else {
+            car["cur_x"] -= update_d;
+        }
+    }
+
     function update() {
         var min_y = [Infinity, Infinity];
         _.each(obstacles, function(obstacle) {
@@ -88,6 +109,9 @@ $(document).ready(function(){
             update_y_proportion(target);
             min_y[target.track] = Math.min(min_y[target.track], target.y_proportion);
         });
+        _.each(cars, function(car) {
+            update_car_position(car);
+        })
         if (min_y[0] > 0) {
             generate_object(0);
         }
@@ -97,7 +121,7 @@ $(document).ready(function(){
 
         collision = false;
         _.each(obstacles, function(obstacle) {
-            var car_x = car_columns[obstacle.track] * width / 4;
+            var car_x = cars[obstacle.track]["cur_x"] * width / 4;
             var car_y = car_prop * height;
             var obstacle_x = obstacle.column * width / 4;
             var obstacle_y = obstacle.y_proportion * height;
@@ -109,7 +133,7 @@ $(document).ready(function(){
         });
 
         targets = _.filter(targets, function(target) {
-            var car_x = car_columns[target.track] * width / 4;
+            var car_x = cars[target.track]["cur_x"] * width / 4;
             var car_y = car_prop * height;
             var target_x = target.column * width / 4;
             var target_y = target.y_proportion * height;
@@ -206,8 +230,8 @@ $(document).ready(function(){
         ctx.stroke();
     }
     function render_cars() {
-        render_car(0, car_columns[0], 1);
-        render_car(1, car_columns[1], 1);
+        render_car(0, cars[0]["cur_x"], 1);
+        render_car(1, cars[1]["cur_x"], 1);
     }
 
     function render_car(track, column, heading) {
@@ -231,10 +255,10 @@ $(document).ready(function(){
         } else {
             return;
         }
-        if (car_columns[i]) {
-            car_columns[i] = 0;
+        if (cars[i]["intended_x"]) {
+            cars[i]["intended_x"] = 0;
         } else {
-            car_columns[i] = 1;
+            cars[i]["intended_x"] = 1;
         }
     });
     $(document).keydown(function(e) {
@@ -247,10 +271,10 @@ $(document).ready(function(){
             return;
         }
 
-        if (car_columns[i]) {
-            car_columns[i] = 0;
+        if (cars[i]["intended_x"]) {
+            cars[i]["intended_x"] = 0;
         } else {
-            car_columns[i] = 1;
+            cars[i]["intended_x"] = 1;
         }
     });
 
