--- a/index.html
+++ b/index.html
@@ -155,8 +155,13 @@ $(document).ready(function(){
             }
         });
 
-
         speed += accel * update_ms / 1000;
+
+        if (collision) {
+            clearInterval(loop);
+            var restart = _.once(init);
+            $(document).one('click keydown', restart);
+        }
     }
 
     function render()
@@ -191,18 +196,24 @@ $(document).ready(function(){
         // frame
         ctx.strokeStyle = "MediumSlateBlue";
         ctx.strokeRect(width/2, 0, 0, height);
-        ctx.strokeStyle = "Black";
         ctx.strokeRect(0, 0, width, height);
         
 
         
 
-        if (collision) {
-            clearInterval(loop);
-        }
         var score_text = "Score: " + score;
-        ctx.font = "16px Arial";
-        ctx.fillText(score_text, 10, 25);
+        ctx.fillStyle = "Cornsilk";
+        if (collision) {
+            ctx.font = "36px Arial";
+            ctx.textAlign = "center";
+            ctx.fillText(score_text, width / 2, height / 2);
+            ctx.font = "16px Arial";
+            ctx.fillText("Click to restart", width / 2, height * 1.1 / 2);
+        } else {
+            ctx.font = "16px Arial";
+            ctx.textAlign = "left";
+            ctx.fillText(score_text, 10, 25);
+        }
     }
 
     // render_obstacle(0/1, 0/1, 0-1, 'blue')
