--- a/index.html
+++ b/index.html
@@ -258,11 +258,29 @@ $(document).ready(function(){
         return track * road_width + column * road_width/2 + 7/24 * road_width/2;
     }
 
-    $(canvas).click(function(e) {
+    // $(canvas).click(function(e) {
+    //     var i;
+    //     if (e.offsetX < road_width) {
+    //         i = 0;
+    //     } else if (e.offsetX < 2 * road_width) {
+    //         i = 1;
+    //     } else {
+    //         return;
+    //     }
+    //     if (cars[i]["intended_x"]) {
+    //         cars[i]["intended_x"] = 0;
+    //     } else {
+    //         cars[i]["intended_x"] = 1;
+    //     }
+    // });
+    
+    document.addEventListener('touchstart', function(event) {
         var i;
-        if (e.offsetX < road_width) {
+        var touch = event.touches[0];
+
+        if (touch.pageX < road_width) {
             i = 0;
-        } else if (e.offsetX < 2 * road_width) {
+        } else if (touch.pageX < 2 * road_width) {
             i = 1;
         } else {
             return;
@@ -272,7 +290,9 @@ $(document).ready(function(){
         } else {
             cars[i]["intended_x"] = 1;
         }
-    });
+
+    }, false);
+    
     $(document).keydown(function(e) {
         var i;
         if (_.contains([37, 70], e.which)) {
