--- a/index.html
+++ b/index.html
@@ -275,19 +275,20 @@ $(document).ready(function(){
     if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
         document.addEventListener('touchstart', function(event) {
             var i;
-            var touch = event.touches[0];
-
-            if (touch.pageX < road_width) {
-                i = 0;
-            } else if (touch.pageX < 2 * road_width) {
-                i = 1;
-            } else {
-                return;
-            }
-            if (cars[i]["intended_x"]) {
-                cars[i]["intended_x"] = 0;
-            } else {
-                cars[i]["intended_x"] = 1;
+            for (i in event.touches) {
+                var touch = event.touches[i];
+                if (touch.pageX < road_width) {
+                    i = 0;
+                } else if (touch.pageX < 2 * road_width) {
+                    i = 1;
+                } else {
+                    return;
+                }
+                if (cars[i]["intended_x"]) {
+                    cars[i]["intended_x"] = 0;
+                } else {
+                    cars[i]["intended_x"] = 1;
+                }
             }
 
         }, false);
