--- a/index.html
+++ b/index.html
@@ -160,8 +160,13 @@ $(document).ready(function(){
 
         if (collision) {
             clearInterval(loop);
-            var restart = _.once(init);
-            $(document).one('click keydown', restart);
+            setTimeout(function() {
+                ctx.fillStyle = "Cornsilk";
+                ctx.font = "16px Arial";
+                ctx.fillText("Click to restart", width / 2, height * 1.1 / 2);
+                var restart = _.once(init);
+                $(document).one('click keydown', restart);
+            }, 1000);
         }
     }
 
@@ -208,8 +213,6 @@ $(document).ready(function(){
             ctx.font = "36px Arial";
             ctx.textAlign = "center";
             ctx.fillText(score_text, width / 2, height / 2);
-            ctx.font = "16px Arial";
-            ctx.fillText("Click to restart", width / 2, height * 1.1 / 2);
         } else {
             ctx.font = "16px Arial";
             ctx.textAlign = "left";
