--- a/index.html
+++ b/index.html
@@ -380,10 +380,12 @@ $(document).ready(function(){
 html, body, canvas {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
         </style>
     </head>
     <body>
-        <canvas width="400%" height="550%"></canvas>
+        <canvas width="1000%" height="1000%"></canvas>
     </body>
 </html>
